--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,10 @@
-pool: MyAgentPool
-steps:
-- bash: echo hello world
+- main
+
+  vmImage:  ubuntu-latest
+
+variables:
+  buildConfiguration: 'Release'
+
+- script: dotnet build --configuration $(buildConfiguration)
+  displayName: 'dotnet build $(buildConfiguration)'
+  
